# V-One

./: .dockerignore  .env.example  .gitignore  DEPLOY_QUICKSTART.md  DOKPLOY.md  ENV_SETUP.md  PILOTS_FEATURE.md  QUICKSTART.md  README.md  ROUTES_FEATURE.md  docker-compose.prod.yml  docker-compose.yml  main.py  manage.py  pyproject.toml  route-test.geojson
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt  requirments.txt
backend/accounts/: models.py  permissions.py
backend/accounts/api/: serializers.py  urls.py  views.py
backend/accounts/management/: __init__.py
backend/accounts/migrations/: 0001_initial.py  0002_notification.py  0003_fix_notification_table.py  0004_alter_notification_options_alter_notification_actor_and_more.py  0005_add_user_is_read_only.py  0006_set_demo_user_read_only.py
backend/admin_api/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/admin_api/migrations/: 0001_initial.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: notification_views.py  settings.py  storage.py  urls.py
backend/core/core/: settings.py
backend/core/home/: urls.py
backend/debug/: test.txt
backend/post/: admin.py  models.py
backend/post/api/: route_serializers.py  route_urls.py  route_views.py  serializers.py  urls.py  views.py
backend/post/management/: __init__.py
backend/post/migrations/: 0001_initial.py  0002_flightroute_departure_lat_flightroute_departure_lng_and_more.py  0003_flightroute_waypoints.py  0004_flightroute_visibility.py  (+2 more)
(+142 files in other folders)
